--- a/banner2.html
+++ b/banner2.html
@@ -62,12 +62,12 @@
       <img
         id="thesale"
         src="https://i.postimg.cc/5yXzDJQr/thesalered.png"
-        alt=""
+        alt="demo v2"
       />
       <img
         id="mns"
         src="https://i.postimg.cc/9f2G0ss4/store-white.png"
-        alt=""
+        alt="demo v2"
       />
       <div id="circles">
         <img src="https://i.postimg.cc/mgCYbTpf/circle1.png" />
